# dbus-cplusplus

./: .gitignore  bootstrap  configure.ac
doc/: Makefile.am
examples/glib/: Makefile.am
include/dbus-c++/: api.h  connection.h  dbus.h  debug.h  dispatcher.h  ecore-integration.h  error.h  eventloop-integration.h  eventloop.h  glib-integration.h  interface.h  introspection.h  message.h  object.h  pendingcall.h  pipe.h  property.h  refptr_impl.h  server.h  types.h  util.h
src/: connection.cpp  connection_p.h  debug.cpp  dispatcher.cpp  dispatcher_p.h  error.cpp  eventloop-integration.cpp  eventloop.cpp  interface.cpp  internalerror.h  introspection.cpp  message.cpp  message_p.h  object.cpp  pendingcall.cpp  pendingcall_p.h  pipe.cpp  property.cpp  server.cpp  server_p.h  types.cpp
src/integration/ecore/: ecore-integration.cpp
src/integration/glib/: glib-integration.cpp
